--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 body {
   margin: 0;
   padding: 0;
@@ -68,6 +70,12 @@ form {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
+  background: -o-linear-gradient(
+    top,
+    rgba(34, 34, 34, 0.4) 0%,
+    rgba(34, 34, 34, 1) 50%,
+    rgba(34, 34, 34, 0.4) 100%
+  );
   background: -webkit-gradient(
     linear,
     left top,
@@ -75,12 +83,6 @@ form {
     from(rgba(34, 34, 34, 0.4)),
     color-stop(50%, rgba(34, 34, 34, 1)),
     to(rgba(34, 34, 34, 0.4))
-  );
-  background: -o-linear-gradient(
-    top,
-    rgba(34, 34, 34, 0.4) 0%,
-    rgba(34, 34, 34, 1) 50%,
-    rgba(34, 34, 34, 0.4) 100%
   );
   background: linear-gradient(
     180deg,
