--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,13 @@ form {
   border-bottom: 2px solid #ff5100;
 }
 
+.vrLink {
+  text-decoration: none;
+  color: #1d1d1d;
+  border-bottom: 2px solid #ff5100;
+  transition: all 0.4s ease;
+}
+
 @media (max-width: 850px) {
   .heroPara {
     font-size: 2.3rem;
@@ -130,5 +137,11 @@ form {
   .wrapper {
     padding: 20px;
     min-height: 70vh;
+  }
+}
+
+@media (min-width: 851px) {
+  .vrLink:hover {
+    border-color: #003b6f;
   }
 }
