--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 body,
 html {
   font-size: 16px;
-  font-family: "Poppins", arial, sans-serif;
+  font-family: 'Poppins', arial, sans-serif;
   background: #eee;
 }
 
@@ -122,6 +122,17 @@ form {
   color: #1d1d1d;
   border-bottom: 2px solid #ff5100;
   transition: all 0.4s ease;
+}
+
+.hr-style {
+  border: 0;
+  height: 3px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(255, 81, 0, 1),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 @media (max-width: 850px) {
